dualism: run latexrun twice

--- a/dualism/Makefile
+++ b/dualism/Makefile
@@ -2,6 +2,8 @@ all: dualism_presentation.pdf
 
 %.pdf: %.tex
 	latexrun --latex-cmd=xelatex -o $@ $<
+	# Compile again (to fix section progress bar).
+	latexrun --latex-cmd=xelatex -o $@ $<
 
 .PHONY: all clean
 
